# Aegis-Core

./: LICENSE  README.md  ethical_agent_v15_5.py  pyproject.toml
aegis_core/: __init__.py
